# kubemq-rust

./: BENCHMARKS.md  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  MIGRATION.md  README.md  SECURITY.md  TROUBLESHOOTING.md  build.rs
.github/workflows/: ci.yml
benches/: commands_bench.rs  events_bench.rs  events_store_bench.rs  queries_bench.rs  queues_bench.rs
burnin/: Cargo.toml  burnin-config-port.yaml  burnin-config.yaml
burnin/src/: api.rs  config.rs  engine.rs  main.rs  metrics.rs  payload.rs  report.rs  server.rs  tracker.rs
burnin/src/worker/: commands.rs  events.rs  events_store.rs  mod.rs  queries.rs  queue_simple.rs  queue_stream.rs
docs/: concepts.md  errors.md  howto-pubsub.md  howto-queues.md  howto-rpc.md  howto-tls.md  patterns.md  scenario-event-dashboard.md  scenario-task-pipeline.md  security.md
examples/: channel_management.rs  commands_group.rs  commands_handle.rs  commands_send.rs  commands_send_handle.rs  commands_timeout.rs  connection_auth_token.rs  connection_close.rs  connection_connect.rs  connection_custom_timeouts.rs  connection_mtls.rs  connection_ping.rs  connection_tls.rs  error_handling.rs  events_cancel_subscription.rs  events_consumer_group.rs  events_multiple_subscribers.rs  events_pubsub.rs  events_store_all_start_types.rs  events_store_cancel_subscription.rs  events_store_consumer_group.rs  events_store_pubsub.rs  events_store_replay_from_sequence.rs  events_store_replay_from_time.rs  events_store_start_at_time_delta.rs  events_store_start_from_first.rs  events_store_start_from_last.rs  events_store_start_new_only.rs  events_store_stream.rs  events_stream.rs  events_wildcard.rs  graceful_shutdown.rs  opentelemetry_setup.rs  pattern_fan_out.rs  pattern_request_reply.rs  pattern_work_queue.rs  queries_cached.rs  queries_group.rs  queries_handle.rs  queries_send.rs  (+21 more)
src/: auth.rs  channels.rs  client.rs  commands.rs  common.rs  config.rs  connection.rs  env.rs  error.rs  events.rs  events_store.rs  lib.rs  prelude.rs  queries.rs  queue_stream.rs  queues.rs  retry.rs  server_info.rs  subscription.rs  tls.rs  validate.rs  version.rs
src/proto/: kubemq.rs  mod.rs
src/transport/: grpc.rs  interceptor.rs  mod.rs
tests/: integration_tests.rs  mock_server.rs  unit_tests.rs
tests/integration/: channels_test.rs  commands_test.rs  concurrency_test.rs  coverage_client_test.rs  coverage_grpc_test.rs  events_store_test.rs  events_test.rs  mod.rs  queries_test.rs  queues_simple_test.rs  queues_stream_test.rs  (+1 more)
(+17 files in other folders)
